--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,16 @@
           font-size: 1vw;
         }
       }
+      @media screen and (max-width: 780px){
+        html{
+          font-size: 1.2vw;
+        }
+      }
+      @media screen and (max-width: 580px){
+        html{
+          font-size: 1.1vw;
+        }
+      }
       @media screen and (max-width: 450px){
         html{
           font-size: 3vw;
