--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,17 +21,22 @@
       }
       @media screen and (max-width: 780px){
         html{
-          font-size: 1.2vw;
+          font-size: 1.1vw;
         }
       }
       @media screen and (max-width: 580px){
         html{
-          font-size: 1.1vw;
+          font-size: 1.15vw;
         }
       }
       @media screen and (max-width: 450px){
         html{
-          font-size: 3vw;
+          font-size: 1.1vw;
+        }
+      }
+      @media screen and (max-width: 350px){
+        html{
+          font-size: 1.1vw;
         }
       }
     </style>
